# desktoplab

./: .desktoplab-agent-distribution.json  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
crates/desktoplab-acp-plugin/: Cargo.toml
crates/desktoplab-acp-plugin/src/: lib.rs  protocol.rs
crates/desktoplab-acp-plugin/tests/: acp_conformance.rs  acp_plugin_proof.rs  acp_productization.rs
crates/desktoplab-agent-engine/: Cargo.toml
crates/desktoplab-agent-engine/src/: context.rs  context_planner.rs  final_response.rs  inference.rs  inference_endpoint.rs  iterative_approval.rs  iterative_loop.rs  iterative_protocol.rs  iterative_resume.rs  iterative_state.rs  json_schema_validator.rs  lib.rs  llm.rs  loop_engine.rs  loop_events.rs  mcp_schema_validator.rs  observation.rs  output_sanitizer.rs  parallel_policy.rs  planning.rs  product_loop.rs  prompt_step.rs  request.rs  retry.rs  tool_call_normalizer.rs  tool_decisions.rs  tool_failure_guard.rs  tool_loop.rs  tool_schema.rs  tool_schema_builders.rs  tool_schema_catalog.rs  tool_schema_control_catalog.rs  tool_schema_extensions.rs  tool_schema_inputs.rs  tool_schema_process_catalog.rs  tool_telemetry.rs  trace.rs
crates/desktoplab-agent-engine/tests/: agent_productization.rs  agent_tool_orchestration.rs  agent_trace_envelope.rs  approval_mode_execution.rs  approval_pause_resume.rs  bounded_tool_loop.rs  context_planner.rs  failure_retry_loop.rs  iterative_agent_loop.rs  local_agent_engine.rs  local_inference_boundary.rs  mcp_schema_validation.rs  minimal_agent_loop.rs  model_protocol_recovery.rs  observation_final_synthesis.rs  openai_compatible_endpoint.rs  provider_tool_call_normalizer.rs  real_agent_step.rs  tool_loop_telemetry.rs  tool_schema_extensions.rs  tool_schema_guards.rs  tool_schema_provider_contract.rs  tool_schema_registry.rs  workspace_context.rs  worktree_write_policy.rs
crates/desktoplab-agent-session/: Cargo.toml
crates/desktoplab-agent-session/src/: event.rs  job.rs  lib.rs  replay.rs  session.rs  terminal_evidence.rs
crates/desktoplab-agent-session/tests/: agent_session_lifecycle.rs
crates/desktoplab-backend-services/: Cargo.toml
crates/desktoplab-backend-services/src/: approval.rs  approval_consumption.rs  approval_invalidation.rs  approval_terminal.rs  audit.rs  composition.rs  diagnostics.rs  diagnostics_repair.rs  event_stream.rs  jobs.rs  lib.rs  performance.rs  plugin_host.rs  plugin_productization.rs  provider_credentials.rs  provider_probes.rs  provider_productization.rs  resource_guards.rs  review_work_units.rs  routing.rs  run_cards.rs  session_job_service.rs  session_queue_service.rs  session_recovery.rs  session_storage.rs  session_trace.rs  session_trace_metadata.rs  session_turns.rs  sessions.rs  setup_selection.rs  setup_wizard.rs  workflow.rs  workflow_validation.rs
crates/desktoplab-backend-services/tests/: agent_restart_recovery.rs  approval_service_api.rs  audit_log_api.rs  backend_diagnostics_api.rs  backend_event_outbox.rs  backend_event_stream_api.rs  backend_routing_api.rs  diagnostics_repair_productization.rs  job_service_api.rs  offline_plugin_inspector.rs  operator_run_cards.rs  packaging_diagnostics.rs  plugin_host_v1.rs  plugin_productization.rs  provider_credential_api.rs  provider_probes.rs  provider_productization.rs  review_work_units.rs  service_composition_root.rs  session_persistence.rs  session_service_api.rs  session_trace_action_catalog.rs  session_trace_persistence.rs  session_trace_semantics.rs  session_turn_queue.rs  setup_selection.rs  setup_wizard_backend_api.rs  typed_workflows.rs
crates/desktoplab-backends/: Cargo.toml
crates/desktoplab-backends/src/: backend_prompt.rs  bridge_readiness.rs  claude_bridge.rs  codex_bridge.rs  external_harness.rs  lib.rs  lm_studio_execution.rs  model_capabilities.rs  model_protocol_certification.rs  ollama_capabilities.rs  ollama_execution.rs  ollama_protocol_canary.rs  ollama_stream.rs  openai_codex_device_auth.rs  openai_codex_device_http.rs  openai_codex_local_bridge.rs  openai_compatible_local.rs  openai_compatible_stream.rs  productization.rs  provider_compatibility.rs  tool_calling.rs  tool_response_bridge.rs
crates/desktoplab-backends/tests/: claude_agent_sdk_bridge.rs  codex_app_server_bridge.rs  external_backend_harness.rs  external_bridge_productization.rs  external_bridge_readiness.rs  lm_studio_backed_execution.rs  native_tool_history.rs  ollama_backed_execution.rs  ollama_constrained_execution.rs  ollama_model_capabilities.rs  ollama_protocol_canary.rs  ollama_protocol_canary_live.rs  ollama_request_timeout.rs  ollama_streaming.rs  openai_codex_device_auth.rs  openai_codex_local_bridge.rs  openai_compatible_high_end_execution.rs  openai_compatible_streaming.rs  provider_compatibility_profiles.rs  provider_shaped_adapter_mocks.rs  tool_calling_adapter.rs
crates/desktoplab-compatibility/: Cargo.toml
crates/desktoplab-compatibility/src/: capabilities.rs  catalog.rs  channel.rs  decision.rs  engine.rs  frontier_catalog.rs  hardware.rs  lib.rs  manifests.rs  seed_catalog.rs
crates/desktoplab-compatibility/tests/: compatibility_engine.rs  frontier_model_catalog.rs  model_seed_catalog.rs
crates/desktoplab-control-plane/: Cargo.toml
crates/desktoplab-control-plane/src/: acp_bridge.rs  api.rs  (+47 more)
crates/desktoplab-downloads/: Cargo.toml
crates/desktoplab-e2e-harness/: Cargo.toml
crates/desktoplab-execution-router/: Cargo.toml
crates/desktoplab-hardware-wizard/: Cargo.toml
crates/desktoplab-model-manager/: Cargo.toml
crates/desktoplab-packaging/: Cargo.toml
crates/desktoplab-policy/: Cargo.toml
crates/desktoplab-registry/: Cargo.toml
crates/desktoplab-runtime/: Cargo.toml
crates/desktoplab-security-gates/: Cargo.toml
crates/desktoplab-smoke-cli/: Cargo.toml
crates/desktoplab-storage/: Cargo.toml
crates/desktoplab-tool-gateway/: Cargo.toml
crates/desktoplab-vault/: Cargo.toml
crates/desktoplab-workspace/: Cargo.toml
(+1093 files in other folders)
