[package]
name = "desktoplab-agent-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DesktopLab-owned local agent loop orchestration."

[dependencies]
desktoplab-agent-session = { path = "../desktoplab-agent-session" }
desktoplab-policy = { path = "../desktoplab-policy" }
desktoplab-redaction = { path = "../desktoplab-redaction" }
desktoplab-tool-gateway = { path = "../desktoplab-tool-gateway" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
desktoplab-workspace = { path = "../desktoplab-workspace" }
tempfile = "3"
xtask = { path = "../../xtask" }

[lib]
path = "src/lib.rs"
