[package]
name = "desktoplab-agent-session"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DesktopLab-owned agent session lifecycle and replay contracts."

[dev-dependencies]
xtask = { path = "../../xtask" }

[lib]
path = "src/lib.rs"
