[package]
name = "desktoplab-backend-services"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DesktopLab backend service composition root."

[dependencies]
desktoplab-agent-session = { path = "../desktoplab-agent-session" }
desktoplab-events = { path = "../desktoplab-events" }
desktoplab-execution-router = { path = "../desktoplab-execution-router" }
desktoplab-hardware-wizard = { path = "../desktoplab-hardware-wizard" }
desktoplab-model-manager = { path = "../desktoplab-model-manager" }
desktoplab-policy = { path = "../desktoplab-policy" }
desktoplab-redaction = { path = "../desktoplab-redaction" }
desktoplab-storage = { path = "../desktoplab-storage" }
desktoplab-tool-gateway = { path = "../desktoplab-tool-gateway" }
desktoplab-vault = { path = "../desktoplab-vault" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
xtask = { path = "../../xtask" }

[lib]
path = "src/lib.rs"
