[package]
name = "desktoplab-control-plane"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DesktopLab local control-plane contracts and lifecycle skeleton."

[dependencies]
desktoplab-backend-services = { path = "../desktoplab-backend-services" }
desktoplab-agent-engine = { path = "../desktoplab-agent-engine" }
desktoplab-agent-session = { path = "../desktoplab-agent-session" }
desktoplab-backends = { path = "../desktoplab-backends" }
desktoplab-domain = { path = "../desktoplab-domain" }
desktoplab-hardware-wizard = { path = "../desktoplab-hardware-wizard" }
desktoplab-model-manager = { path = "../desktoplab-model-manager" }
desktoplab-policy = { path = "../desktoplab-policy" }
desktoplab-redaction = { path = "../desktoplab-redaction" }
desktoplab-runtime = { path = "../desktoplab-runtime" }
desktoplab-storage = { path = "../desktoplab-storage" }
desktoplab-tool-gateway = { path = "../desktoplab-tool-gateway" }
desktoplab-vault = { path = "../desktoplab-vault" }
desktoplab-workspace = { path = "../desktoplab-workspace" }
desktoplab-acp-plugin = { path = "../desktoplab-acp-plugin" }
serde_json = "1"
sha2 = "0.10"
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"
xtask = { path = "../../xtask" }

[lib]
path = "src/lib.rs"
