[package]
name = "desktoplab-downloads"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DesktopLab shared download job lifecycle, validation and retry contracts."

[dev-dependencies]
xtask = { path = "../../xtask" }

[lib]
path = "src/lib.rs"
