[package]
name = "desktoplab-execution-router"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DesktopLab execution routing by capability, policy, egress and trust."

[dependencies]
desktoplab-domain = { path = "../desktoplab-domain" }
desktoplab-model-manager = { path = "../desktoplab-model-manager" }
desktoplab-policy = { path = "../desktoplab-policy" }
desktoplab-runtime = { path = "../desktoplab-runtime" }

[dev-dependencies]
xtask = { path = "../../xtask" }

[lib]
path = "src/lib.rs"
