[package]
name = "desktoplab-hardware-wizard"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DesktopLab hardware wizard v1 profiling and recommendation inputs."

[dev-dependencies]
xtask = { path = "../../xtask" }

[lib]
path = "src/lib.rs"
