[package]
name = "desktoplab-packaging"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DesktopLab package artifact, release channel and platform contracts."

[dev-dependencies]
xtask = { path = "../../xtask" }

[lib]
path = "src/lib.rs"
