[package]
name = "desktoplab-policy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DesktopLab policy and approval decision engine."

[dependencies]
desktoplab-domain = { path = "../desktoplab-domain" }

[dev-dependencies]
xtask = { path = "../../xtask" }

[lib]
path = "src/lib.rs"
