[package]
name = "desktoplab-registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DesktopLab registry manifest client and cache."

[dependencies]
desktoplab-storage = { path = "../desktoplab-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
xtask = { path = "../../xtask" }

[lib]
path = "src/lib.rs"
