[package]
name = "desktoplab-security-gates"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DesktopLab backend security hardening gates."

[dependencies]
desktoplab-policy = { path = "../desktoplab-policy" }

[dev-dependencies]
desktoplab-acp-plugin = { path = "../desktoplab-acp-plugin" }
desktoplab-backend-services = { path = "../desktoplab-backend-services" }
desktoplab-execution-router = { path = "../desktoplab-execution-router" }
desktoplab-registry = { path = "../desktoplab-registry" }
desktoplab-storage = { path = "../desktoplab-storage" }
xtask = { path = "../../xtask" }

[lib]
path = "src/lib.rs"
