[package]
name = "desktoplab-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DesktopLab local SQLite metadata storage and event log."

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
serde_json = "1"
fs2 = "0.4"
tempfile = "3"
tar = "0.4"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
xtask = { path = "../../xtask" }

[lib]
path = "src/lib.rs"
