[package]
name = "desktoplab-tool-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DesktopLab policy-gated filesystem, terminal and git tool gateway."

[dependencies]
desktoplab-policy = { path = "../desktoplab-policy" }
desktoplab-redaction = { path = "../desktoplab-redaction" }
desktoplab-workspace = { path = "../desktoplab-workspace" }
cap-std = "4.0.2"
cap-fs-ext = "4.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
xtask = { path = "../../xtask" }

[lib]
path = "src/lib.rs"
