[package]
name = "desktoplab-vault"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DesktopLab native vault boundary and secret reference contracts."

[dependencies]
keyring = "=4.1.5"

[dev-dependencies]
xtask = { path = "../../xtask" }

[lib]
path = "src/lib.rs"
